# zupo

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: architecture.md  commands.md  configuration.md
src/: config.rs  geolocate.rs  main.rs  render.rs
src/api/: autocomplete.rs  client.rs  details.rs  errors.rs  mod.rs  nearby.rs  photo.rs  resolve.rs  route.rs  search.rs  types.rs
src/tui/: app.rs  event.rs  mod.rs  place_types.rs  ui.rs
src/tui/widgets/: filter_panel.rs  mod.rs  place_details.rs  places_list.rs  search_bar.rs  status_bar.rs
