[package]
name = "zupo"
version = "0.1.0"
edition = "2021"
description = "A Rust CLI for Google Places API (New)"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2"
dotenvy = "0.15"
anyhow = "1"
viuer = "0.9"
image = "0.25"
